<resources>
    <string name="app_name">SLOBRARY</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
    <string name="idLabel">아이디</string>
    <string name="insertID">아이디를 입력하세요.</string>
    <string name="pwLabel">비밀번호</string>
    <string name="insertPW">비밀번호를 입력하세요.</string>
    <string name="pwReEnterLabel">비밀번호 확인</string>
    <string name="reInsertPW">비밀번호를 다시한번 입력하세요.</string>
    <string name="userName">이름</string>
    <string name="insertName">이름을 입력하세요.</string>
    <string name="birth">생년월일</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="gender">성별</string>
    <string name="phone">핸드폰번호</string>
    <string name="insertPhone">01012345678</string>
    <string name="homeAddr">집주소</string>
    <string name="insertHomeAddr">주소를 검색하세요.</string>
    <string name="mail">이메일주소</string>
    <string name="insertMail">이메일 주소를 입력하세요.</string>
    <string name="signUp">회원가입</string>
    <string name="login">&#160;&#160;로그인&#160;&#160;</string>
    <string name="logout">로그아웃</string>
    <string name="home">HOME</string>
    <string name="mypage">마이페이지</string>
    <string name="notice">공지사항</string>
    <string name="wish">희망도서</string>
    <string name="wish2">희망도서 신청</string>
    <string name="reco">추천도서</string>
    <string name="qna">자주하는 질문</string>
    <string name="info">이용약관</string>
    <string name="booksearch">검색어를 입력하세요</string>
    <string name="bestb">베스트셀러</string>
    <string name="title">제목</string>
    <string name="author">작가</string>
    <string name="publisher">출판사</string>
    <string name="publisherYear">출판연도</string>
    <string name="left">◁</string>
    <string name="right">▷</string>
    <string name="loan">대출 도서</string>
    <string name="preloan">반납 도서</string>
    <string name="more">더보기</string>
    <string name="list">목록</string>
    <string name="writer">작성자 :&#160;</string>
    <string name="dueDate">반납일</string>
    <string name="reqDate">신청 날짜</string>
    <string name="back">이전</string>
    <string name="ques1">도서관 이용시간과 휴관일은 어떻게 되나요?</string>
    <string name="answer1">다음 표를 참고해주세요.</string>
    <string name="answer1_table1">
        07:00 ~ 24:00\n(휴관일은 월 09:00 ~ 18:00)</string>
    <string name="answer1_table2">
        09:00 ~ 22:00\n(토,일요일은 09:00 ~ 18:00)</string>
    <string name="ques2">열람실은 어떻게 이용하나요?</string>
    <string name="answer2">열람실은 별도의 절차 없이 이용가능합니다.</string>
    <string name="ques3">도서관 회원카드를 분실하였는데 어떻게 하나요?</string>
    <string name="answer3">소속 도서관을 방문하여 재발급을 신청하면 됩니다. 분실 시 회원카드의 타인에 의한 무단사용을 방지하기 위해 도서관에 즉시 통지 부탁드립니다.</string>
    <string name="ques4">자료를 프린트 하거나 복사를 할 수 있나요?</string>
    <string name="answer4">비용을 지불하여 지정된 PC와 복사기를 이용해 프린트/출력/복사가 가능합니다.</string>
    <string name="cormfirm">확인</string>
</resources>