<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bCover"
            android:src="@drawable/book"
            android:layout_width="100dp"
            android:layout_height="120dp"/>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center_vertical"
                android:id="@+id/bTitle"
                android:hint="@string/title"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center_vertical"
                android:id="@+id/bAuth"
                android:hint="@string/author"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center_vertical"
                    android:text="@string/publisher"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/bPub"
                    android:hint="@string/publisher"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center_vertical"
                    android:text="@string/publisherYear"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/bPubY"
                    android:hint="@string/publisherYear"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
