<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/bCover"
            android:src="@drawable/book"
            android:layout_width="100dp"
            android:layout_height="120dp"/>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center_vertical"
                android:id="@+id/bTitle"
                android:hint="@string/title"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="20"/>
            <TextView
                android:gravity="center_vertical"
                android:id="@+id/bAuth"
                android:hint="@string/author"
                android:textSize="13dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="20"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/bPub"
                    android:hint="@string/publisher"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center_vertical"
                    android:text="대출일"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/bLoan"
                    android:hint="대여일"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center_vertical"
                    android:text="@string/dueDate"
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/bReturn"
                    android:hint="@string/dueDate"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="대출중"
                    android:layout_marginRight="20dp"
                    app:bootstrapBrand="primary"
                    app:bootstrapSize="sm"
                    app:buttonMode="regular"
                    app:showOutline="true"
                    app:roundedCorners="true"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
