<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wish.Wish2Fragment">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish2"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="bold"
            />
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:background="#9C9C9C"/>


        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:text="@string/title"
                android:textSize="15dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:hint="@string/title"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:text="@string/author"
                android:textSize="15dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:hint="@string/author"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:text="@string/publisher"
                android:textSize="15dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"/>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:hint="@string/publisher"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapSize="md"
                app:bootstrapBrand="info"
                app:roundedCorners="true"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <Button
                android:text="신청"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:background="@drawable/border_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/wishApply"
                />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>