<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.HomeFragment"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
        <ImageView
            android:layout_marginTop="-15dp"
            android:src="@drawable/logo22"
            android:layout_width="180dp"
            android:layout_height="172dp"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
        <EditText
            android:hint="@string/booksearch"
            android:padding="15dp"
            android:background="@drawable/border"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
<!--        <Button-->
<!--            android:text="확인"-->
<!--            android:id="@+id/btnSearch"-->
<!--            android:background="@drawable/border_btn"-->
<!--            android:textColor="#ffff"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="40dp"/>-->
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:theme="@style/customButtonFontStyle"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/btnSearch"
            android:text="@string/cormfirm"
            app:bootstrapBrand="primary"
            app:buttonMode="regular"
            app:showOutline="true"
            app:roundedCorners="true"
            />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    </LinearLayout>

    <TextView
        android:text="@string/bestb"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
</ScrollView>